src/objects/pse__Skill_Certification_Rating__c.object
<CustomObject>
    <customHelpPage>pse__SkillCertificationRatingHelp</customHelpPage>
    <description>Records a resource&apos;s proficiency rating in a skill/certification.</description>
    <fields>
        <fullName>pse__Evaluation_Date__c</fullName>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Numerical_Rating__c</fullName>
        <formula>IF(ISNUMBER( LEFT(TEXT(pse__Rating__c),2)),
VALUE(LEFT(TEXT(pse__Rating__c),2)),
VALUE(LEFT(TEXT(pse__Rating__c),1))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerical Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Limited Exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Some Familiarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Comfortable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Strong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Expert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Skill and Certification Ratings</relationshipLabel>
        <relationshipName>Skill_Certification_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Skill_Certification__c</fullName>
        <label>Skill / Certification</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Resource Ratings</relationshipLabel>
        <relationshipName>Resource_Ratings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Skill / Certification Rating</label>
    <nameField>
        <displayFormat>Rating{0000000}</displayFormat>
        <label>Rating Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill and Certification Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Check_Resource</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN(pse__Resource__c) &gt;  0,  NOT( pse__Resource__r.pse__Is_Resource__c))</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>Resource lookup must be set to an Contact with Is Resource = true</errorMessage>
    </validationRules>
</CustomObject>